@@ -1,4 +1,10 @@
-2008-01-07  Matti Aarnio - OH2MQK - KP20NG  <mea@mea.h.zmailer.org>
+2008-01-08  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
+
+	* aprx.h, ttyreader.c, erlang.c, netax25.c, aprx-stat.c:
+	    When talking with multi-drop KISS, account each TNC
+	    separately.
+
+2008-01-07  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* version 0.15
 
@@ -32,7 +38,7 @@
 	    if it does not have to overwrite the thing.
 	    "make dist" is even more interesting beast..
 
-2008-01-06  Matti Aarnio - OH2MQK - KP20NG  <mea@mea.h.zmailer.org>
+2008-01-06  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* version 0.14
 
